Best appareance in card

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   <h5 class="card-title"><strong>On Motion Live</strong></h5>
                   <p class="card-text">Perfecta para salidas rocosas</p>
                   <a href="#" class="btn btn-primary">$250 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-                  <a href="#" class="btn btn-secondary">Detalles</a>
+                  <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Detalles</button>
                 </div>
               </div>
             </div>
@@ -186,7 +186,7 @@
                   <h5 class="card-title"> <strong>Underground Max</strong> </h5>
                   <p class="card-text">Para los amantes del Underground</p>
                   <a href="#" class="btn btn-primary">$230 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-                  <a href="#" class="btn btn-secondary">Detalles</a>
+                  <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Detalles</button>
                 </div>
               </div>
             </div>
@@ -196,9 +196,9 @@
                 <img class="card-img-top" src="producto4.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title"><strong>Awesome</strong></h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Para hombres seguros.</p>
                   <a href="#" class="btn btn-primary">$229 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-                  <a href="#" class="btn btn-secondary">Detalles</a>
+                  <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Detalles</button>
                 </div>
               </div>
             </div>
@@ -207,9 +207,9 @@
                 <img class="card-img-top" src="producto5.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title"><strong>Vintage</strong></h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Ideal para hombres sofisticados</p>
                   <a href="#" class="btn btn-primary">$229 <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-                  <a href="#" class="btn btn-secondary">Detalles</a>
+                  <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Detalles</button>
                 </div>
               </div>
             </div>
